@@ -1,3 +1,8 @@
+2013-01-31  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* xstring.cc, xstring.h: add flags in url_decode.
+	* Torrent.cc: pass URL_DECODE_PLUS flag to decode '+' into space.
+
 2013-01-29  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* xstring.cc: (_url_decode) fixed decoding plus sign.
